<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.blunderer.materialdesignlibrary.views.CardView
                android:id="@+id/NewCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mdl_title="@string/NewHubTitle"
                app:mdl_description="@string/NewHubDescription"
                app:mdl_normalButton="@string/NewHubButton"
                app:mdl_imagePosition="top"
                app:mdl_image="@mipmap/cardview_image_top"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <com.blunderer.materialdesignlibrary.views.CardView
                android:id="@+id/ExistingCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mdl_title="@string/ExistingHubTitle"
                app:mdl_description="@string/ExistingHubDescription"
                app:mdl_normalButton="@string/ExistingHubButton"
                app:mdl_imagePosition="top"
                app:mdl_image="@mipmap/cardview_image_top"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>